use Swing instead of JavaFX due to easier packaging