@@ -2,9 +2,6 @@ buildscript {
     repositories {
         mavenCentral()
     }
-    dependencies {
-        classpath 'com.google.gradle:osdetector-gradle-plugin:1.6.0'
-    }
 }
 
 plugins {
@@ -12,9 +9,6 @@ plugins {
 }
 
 apply plugin: 'application'
-apply plugin: 'com.google.osdetector'
-
-ext.platform = osdetector.os == 'osx' ? 'mac' : osdetector.os == 'windows' ? 'win' : osdetector.os
 
 group 'com.teamscale'
 version '1.0.0'
@@ -25,38 +19,7 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation "org.openjfx:javafx-base:11.0.1:$platform"
-    implementation "org.openjfx:javafx-graphics:11.0.1:$platform"
-    implementation "org.openjfx:javafx-controls:11.0.1:$platform"
-    implementation "org.openjfx:javafx-fxml:11.0.1:$platform"
-}
-
-compileJava {
-    doFirst {
-        options.compilerArgs = [
-                '--module-path', classpath.asPath,
-                '--add-modules', 'javafx.controls',
-                '--add-exports', 'javafx.graphics/com.sun.javafx.util=ALL-UNNAMED'
-        ]
-    }
-}
-
-run {
-    doFirst {
-        jvmArgs = [
-                '--module-path', classpath.asPath,
-                '--add-modules', 'javafx.controls',
-                '--add-exports', 'javafx.graphics/com.sun.javafx.util=ALL-UNNAMED',
-                '--add-exports', 'javafx.base/com.sun.javafx.reflect=ALL-UNNAMED'
-        ]
-    }
-}
-
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    implementation group: 'com.jgoodies', name: 'jgoodies-forms', version: '1.9.0'
 }
 
 mainClassName = 'Main'
